# dlstreamer

./: Makefile  README.md  RELEASE_NOTES.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dls-build-and-test-deb_pkgs-and-deb_imgs.yaml  dls-build-and-test-windows.yaml  dls-build-dev-docker-images-and-run-unit.yaml  dls-coverity.yaml  dls-pr-workflow.yaml  dls-weekly-cached-images.yaml  scorecard.yml  zizmor-scan.yaml
SPECS/: README.md  versions.env
SPECS/intel-dlstreamer/: intel-dlstreamer.spec
SPECS/opencv/: opencv.spec
dependencies/: opencv.cmake
docker/fedora41/: fedora41.Dockerfile  intel-dlstreamer.spec
docker/ubuntu/: ubuntu22.Dockerfile  ubuntu24.Dockerfile
docker/ubuntu/debian/: control  control-ubuntu22
docker/windows/: windows_builder.Dockerfile
docs/scripts/: sphinx_build.sh
docs/source/: index.md  release-notes.md  supported_models.md
docs/source/architecture_2.0/: cpp_elements.md  cpp_interfaces.md
docs/source/dev_guide/: converting_deepstream_to_dlstreamer.md  custom_processing.md  download_public_models.md  how_to_create_model_proc_file.md  lvms.md  metadata.md  model_preparation.md  model_proc_file.md  object_tracking.md  optimizer.md  python_bindings.md  yolo_models.md
docs/source/elements/: elements.md  gvaclassify.md  gvadetect.md  gvafpsthrottle.md  gvagenai.md  gvainference.md  gvametaconvert.md  gvametapublish.md  gvawatermark.md
docs/source/get_started/: get_started_index.md  system_requirements.md  tutorial.md
docs/user-guide/: conf.py  release-notes.md  supported_models.md
docs/user-guide/dev_guide/: dev_guide_index.md  dlstreamer-deepstream-coexistence.md  yolo_models.md
include/dlstreamer/: element.h
include/dlstreamer/gst/: context.h
include/dlstreamer/openvino/: context.h
include/dlstreamer/radar/: libradar.h
python/gstgva/: region_of_interest.py  tensor.py  util.py
samples/: download_public_models.sh
samples/gstreamer/: README.md
samples/gstreamer/python/: README.md
samples/windows/: download_omz_models.bat
scripts/: DLS_install_prerequisites.sh  build_dlstreamer_dlls.ps1  install_radar_dependencies.sh  setup_dls_env.ps1
scripts/install_dependencies/: install_openvino.sh
scripts/optimizer/: __init__.py  __main__.py  optimizer.py  preprocess.py
scripts/optimizer/processors/: inference.py
src/: CMakeLists.txt
src/base/openvino_inference_backend/: CMakeLists.txt
src/cpu/_plugin/dlstreamer/cpu/elements/: CMakeLists.txt
src/gst/elements/: CMakeLists.txt
src/gst/elements/batch_create/: CMakeLists.txt  batch_create.h
src/gst/elements/batch_split/: batch_split.h
src/gst/elements/gvafpscounter/: fpscounter.cpp  fpscounter.h  fpscounter_c.cpp  gstgvafpscounter.c  gstgvafpscounter.h
src/gst/elements/gvainference/: CMakeLists.txt
src/gst/lib/: CMakeLists.txt  transform_element.cpp
src/gst/metadata/: CMakeLists.txt  g3d_lidar_meta.c  g3d_radarprocess_meta.c
src/gst/tracers/buffer_tracer/: CMakeLists.txt
src/gst/tracers/gvaitttracer/: CMakeLists.txt
src/monolithic/gst/: CMakeLists.txt
src/monolithic/gst/3d_elements/: CMakeLists.txt
src/monolithic/gst/3d_elements/g3dradarprocess/: CMakeLists.txt  gstradarprocess.cpp  gstradarprocess.h  radar_config.hpp
src/monolithic/gst/3d_registrator/: CMakeLists.txt  register_3d_elements.cpp
src/monolithic/gst/common/: gva_caps.h
src/monolithic/gst/elements/: CMakeLists.txt
src/monolithic/gst/elements/gvaattachroi/: CMakeLists.txt
src/monolithic/gst/elements/gvafpsthrottle/: gvafpsthrottle.cpp  gvafpsthrottle.hpp
src/monolithic/gst/elements/gvagenai/: genai.cpp  genai.hpp  gstgvagenai.cpp
src/monolithic/gst/elements/gvametaconvert/: gstgvametaconvert.c  jsonconverter.cpp
src/monolithic/gst/elements/gvametapublish/: CMakeLists.txt  gvametapublish.hpp
src/monolithic/gst/elements/gvametapublish/base/: common.hpp
src/monolithic/gst/elements/gvametapublish/file/: gvametapublishfile.hpp
src/monolithic/gst/elements/gvamotiondetect/: gvamotiondetect.cpp  gvamotiondetect_win.cpp
src/monolithic/gst/elements/gvapython/: CMakeLists.txt  gstgvapython.c  python_callback.cpp  python_callback_c.cpp
src/monolithic/gst/elements/gvarealsense/: CMakeLists.txt
src/monolithic/gst/elements/gvatrack/: CMakeLists.txt  gstgvatrack.cpp
src/monolithic/gst/elements/gvawatermark/: gstgvawatermarkimpl.cpp  gstgvawatermarkimpl.h  gvawatermarkcaps.h
src/monolithic/gst/inference_elements/: CMakeLists.txt
src/monolithic/gst/inference_elements/base/: gva_base_inference.cpp  inference_impl.cpp
src/monolithic/gst/inference_elements/common/post_processor/: blob_to_meta_converter.cpp
src/monolithic/gst/inference_elements/common/post_processor/converters/to_roi/: blob_to_roi_converter.cpp  blob_to_roi_converter.h  yolo_v10.cpp  yolo_v10.h  yolo_v26.cpp  yolo_v26.h  yolo_v8.cpp  yolo_v8.h
src/monolithic/gst/registrator/: CMakeLists.txt  register_elements.cpp
src/monolithic/inference_backend/image_inference/: CMakeLists.txt  image_inference.cpp
src/monolithic/inference_backend/image_inference/async_with_d3d11/d3d11_wrapper/: CMakeLists.txt
src/monolithic/inference_backend/image_inference/async_with_d3d11/image_inference_async_d3d11/: CMakeLists.txt
src/monolithic/inference_backend/image_inference/async_with_va_api/va_api_wrapper/: vaapi_converter.cpp  vaapi_utils.cpp
src/monolithic/inference_backend/image_inference/openvino/: CMakeLists.txt  model_api_converters.cpp  model_api_converters.h  openvino_image_inference.cpp
src/monolithic/inference_backend/include/inference_backend/: buffer_mapper.h  image_inference.h
src/opencl/_plugin/dlstreamer/opencl/elements/: CMakeLists.txt
src/opencl/vaapi_to_opencl/: CMakeLists.txt
src/opencv/_plugin/dlstreamer/opencv/elements/: CMakeLists.txt
src/opencv/opencv_warp_affine/: CMakeLists.txt
src/openvino/_plugin/dlstreamer/openvino/elements/: CMakeLists.txt
src/openvino/openvino_inference/: CMakeLists.txt
src/vaapi/_plugin/dlstreamer/vaapi/elements/: CMakeLists.txt
tests/scripts/: installation-on-host-entrypoint.sh  run_unit_tests.sh
(+53 files in other folders)
