# ==============================================================================
# Copyright (C) 2026 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

add_subdirectory(g3dradarprocess)
###add_subdirectory(g3dlidarparse)
